--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <h3>Add a Pet:</h3>
     <form>
-        <!-- Change these IDs? -->
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="name" placeholder="Name">
             <label for="floatingInput">Name</label>
